--- a/web/template/article.html
+++ b/web/template/article.html
@@ -8,6 +8,7 @@
   <link rel="modulepreload" href="/static/app/sharpdown/main.js" />
   <link rel="modulepreload" href="/static/app/sharpdown/dotnet.js" />
   <link rel="preload" href="/static/app/postproc/wikilink.js" as="script" />
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" as="script" />
   <link rel="prefetch" href="/static/app/sharpdown/dotnet.wasm"  as="fetch" />
   <link rel="prefetch" href="/static/app/sharpdown/icudt.dat" as="fetch" />
   <link rel="prefetch" href="/static/app/sharpdown/managed/System.Private.CoreLib.dll" as="fetch" />
@@ -19,6 +20,17 @@
   <script type="module" src="/static/app/sharpdown/main.js"></script>
   <script src="/static/app/postproc/wikilink.js"></script>
   <script src="/static/app/postproc/embeddedfile.js"></script>
+  <script>
+      MathJax = {
+          startup: {
+              typeset: false
+          },
+          tex: {
+              inlineMath: [['$', '$']]
+          }
+      };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 </body>
 
 </html>
