--- a/web/template/article.html
+++ b/web/template/article.html
@@ -13,6 +13,9 @@
   <link rel="preload" href="/static/app/postproc/postproc.js" as="script" />
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" as="script" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/styles/nord.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/source-serif-pro@5.0.8/index.min.css">
+
   <link rel="prefetch" href="/static/app/sharpdown/dotnet.wasm"  as="fetch" />
   <link rel="prefetch" href="/static/app/sharpdown/icudt.dat" as="fetch" />
   <link rel="prefetch" href="/static/app/sharpdown/managed/System.Private.CoreLib.dll" as="fetch" />
@@ -36,6 +39,7 @@
       };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/highlight.min.js"></script>
 </body>
 
 </html>
