--- a/web/template/article.html
+++ b/web/template/article.html
@@ -5,13 +5,15 @@
   <title>{{.}}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="modulepreload" href="/static/app/sharpdown/main.js" />
   <link rel="modulepreload" href="/static/app/sharpdown/dotnet.js" />
 
   <link rel="preload" href="/static/app/postproc/wikilink.js" as="script" />
   <link rel="preload" href="/static/app/postproc/embeddedfile.js" as="script" />
   <link rel="preload" href="/static/app/postproc/postproc.js" as="script" />
-  <link rel="preload" href="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" as="script" />
+
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" as="script" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/styles/nord.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fontsource/source-serif-pro@5.0.8/index.min.css">
@@ -21,7 +23,7 @@
   <link rel="prefetch" href="/static/app/sharpdown/managed/System.Private.CoreLib.dll" as="fetch" />
 </head>
 
-<body>
+<body style="font-family: 'Source Serif Pro'">
   <h1>{{.}}</h1>
   <div id="out"></div>
   <script type="module" src="/static/app/sharpdown/main.js"></script>
@@ -38,7 +40,7 @@
           }
       };
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.8.0/build/highlight.min.js"></script>
 </body>
 
