--- a/web/template/article/article_main.html
+++ b/web/template/article/article_main.html
@@ -5,7 +5,7 @@
 <head>
     <title>{{.Title}}</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="color-scheme" content="dark light">
 
     {{template "head" .}}
