--- a/web/template/index/index_main.html
+++ b/web/template/index/index_main.html
@@ -5,7 +5,7 @@
 <head>
     <title>{{.Title}}</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, target-densitydpi=device-dpi"> -->
     <meta name="color-scheme" content="dark light">
     <link rel="stylesheet" href="/static/css/index.css" />
 </head>
