feat: highlight.js lisp highlight

--- a/web/template/article/article.html
+++ b/web/template/article/article.html
@@ -12,5 +12,6 @@
 <script> MathJax = {tex: {inlineMath: [['$', '$']]}}; </script>
 <script src="/static/js/mathjax/tex-chtml.js"></script>
 <script src="/static/js/highlightjs/highlight.min.js"></script>
+<script src="/static/js/highlightjs/lisp.min.js"></script>
 <script src="/static/js/postproc.js"></script>
 {{end}}
