--- a/web/template/index/whoami.html
+++ b/web/template/index/whoami.html
@@ -1,6 +1,6 @@
 {{define "body"}}
 <hr class="whoami_hr" />
-<img class="whoami_img" src="/static/img/whoami/whoami_1.png">
+<img class="whoami_img" src="/static/img/whoami/whoami_1.png" alt="whoami">
 <div class="whoami_div">
     <h1>Who am I?</h1>
     <p class="whoami">
