add scheme highlight

--- a/web/template/article/article.html
+++ b/web/template/article/article.html
@@ -14,5 +14,6 @@
 <script src="/static/js/highlightjs/highlight.min.js"></script>
 <script src="/static/js/highlightjs/lisp.min.js"></script>
 <script src="/static/js/highlightjs/nix.min.js"></script>
+<script src="/static/js/highlightjs/scheme.min.js"></script>
 <script src="/static/js/postproc.js"></script>
 {{end}}
