specify script preload

--- a/web/template/article/article.html
+++ b/web/template/article/article.html
@@ -2,6 +2,9 @@
 <link rel="preload" href="/static/js/postproc.js" as="script" />
 <link rel="preload" href="/static/js/mathjax/tex-chtml.js" as="script" />
 <link rel="preload" href="/static/js/highlightjs/highlight.min.js" as="script" />
+<link rel="preload" href="/static/js/highlightjs/lisp.min.js" as="script" />
+<link rel="preload" href="/static/js/highlightjs/nix.min.js" as="script" />
+<link rel="preload" href="/static/js/highlightjs/scheme.min.js" as="script" />
 {{end}}
 
 {{define "body"}}
