--- a/web/template/index/whoami.html
+++ b/web/template/index/whoami.html
@@ -12,7 +12,7 @@
             href="https://www.lua.org">lua</a>, although I don't use them much. For most of my projects, I use <a
             href="https://learn.microsoft.com/en-us/dotnet/csharp/">C#</a> and <a href="https://go.dev">Go</a>(btw this
         website server is written in Go), and find them enjoyable too. I'm also a big fan of <a
-            href="https://www.kernel.org">Linux</a>, and I use <a href="https://archlinux.org">Arch Linux</a> as my
+            href="https://www.kernel.org">Linux</a>, and I use <del><a href="https://archlinux.org">Arch Linux</a></del><a href="https://nixos.org">NixOS</a> as my
         daily driver.
     </p>
     <p class="whoami">
