--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -76,7 +76,7 @@
     border-radius: 0.5em;
 }
 
-.whoami>a {
+.whoami a {
     text-decoration: none;
     border-radius: 0.2em;
     padding: 0 0.2em;
