--- a/web/template/article/article_main.html
+++ b/web/template/article/article_main.html
@@ -30,6 +30,9 @@
         </ol>
     </nav>
     {{template "body" .}}
+    <footer>
+        <a class="icp" href="https://icp.gov.moe/?keyword=20241024" target="_blank">萌ICP备20241024号</a>
+    </footer>
 </body>
 
 </html>
