--- a/web/static/css/article.css
+++ b/web/static/css/article.css
@@ -5,6 +5,12 @@
     tab-size: 4;
 }
 
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
 #title {
     font-family: MapleMono, sans-serif;
     font-style: italic;
@@ -13,6 +19,7 @@
 }
 
 #content {
+    flex: 1;
     margin: 0 3em;
     border-radius: 1.5em;
     padding: 2em;
@@ -87,6 +94,7 @@
 }
 
 .dir_list {
+    flex: 1;
     list-style: none;
     padding: 0;
     margin: 0 4em;
@@ -209,4 +217,20 @@ table {
 th,
 td {
     padding: 0.5em 1em;
+}
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3em;
+}
+
+.icp {
+    display: block;
+    text-decoration: none;
+    font-family: MapleMono, monospace;
+    font-style: italic;
+    font-size: 20px;
+    width: fit-content;
 }
