--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -1,14 +1,21 @@
 @import "coloring.css";
 @import "fonts.css";
 
-/* body { */
-/*     background: url("/static/img/index/index.png") center center no-repeat; */
-/*     background-attachment: fixed; */
-/*     background-size: cover; */
-/* } */
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+a {
+    border-radius: 0.2em;
+    transition: background-color 0.2s ease-in-out;
+    padding: 0 0.2em;
+}
 
 .banner_div {
     overflow: hidden;
+    flex: 1;
 }
 
 .main_nav>ul {
@@ -30,11 +37,9 @@
     font-style: italic;
     font-size: 1.5em;
     font-weight: 900;
-    transition: background-color 0.2s ease-in-out;
     text-decoration: none;
     padding: 0.2em 0.5em;
     margin: 0.2em 0;
-    border-radius: 0.2em;
 }
 
 .recent_div {
@@ -46,7 +51,6 @@
     font-family: MapleMono, monospace;
     font-style: italic;
     font-size: 1em;
-    transition: background-color 0.2s ease-in-out;
     text-decoration: none;
     border-radius: 0.5em;
     padding: 0.5em;
@@ -78,9 +82,6 @@
 
 .whoami a {
     text-decoration: none;
-    border-radius: 0.2em;
-    padding: 0 0.2em;
-    transition: background-color 0.2s ease-in-out;
 }
 
 .whoami>code {
@@ -106,7 +107,22 @@
     text-align: center;
     border-radius: 0.3em;
     padding: 0.5em;
-    transition: background-color 0.2s ease-in-out;
+}
+
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 3em;
+}
+
+.icp {
+    display: block;
+    text-decoration: none;
+    font-family: MapleMono, monospace;
+    font-style: italic;
+    font-size: 20px;
+    width: fit-content;
 }
 
 h1 {
