--- a/web/template/index/index_main.html
+++ b/web/template/index/index_main.html
@@ -25,6 +25,9 @@
         </nav>
     </div>
     {{template "body" .}}
+    <footer>
+        <a class="icp" href="https://icp.gov.moe/?keyword=20241024" target="_blank">萌ICP备20241024号</a>
+    </footer>
 </body>
 
 </html>
